# actions

./: .gitignore  CHANGELOG.md  pyproject.toml  semrelease.txt
.github/workflows/: github-actions-demo.yml  manual3.yml
src/actions999/: hello.py
tests/: test_aaa.py
